# VaultFlow

./: .gitignore  AI_DOCUMENTATION.md  FEATURES_AND_PLAN.md  README.md  STATUS.md  next.config.js  package-lock.json  package.json  structure.md  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AIPanel.tsx  BlockControls.tsx  Breadcrumbs.tsx  Canvas.tsx  CommandPalette.tsx  Editor.tsx  EditorToolbar.tsx  FileNameInput.tsx  FolderView.tsx  Sidebar.tsx  SlashMenu.tsx  TerminalNav.tsx  VaultSelector.tsx
src/components/ui/: dropdown-menu.tsx
src/lib/: ai.ts  navParser.ts  vault.ts
src/store/: useAIStore.ts  useNavStore.ts  useVaultStore.ts
src/types/: dnd-kit.d.ts  excalidraw-css.d.ts
